# presenations

./: README
FOSS day/: README  ellak.odp
openSUSE gr Summer Camp 2011/: main.cpp  parousiasi.odp
openSUSE gr Summer Camp 2011/src/: hellokdeprogramming.cpp
openSUSE gr Summer Camp 2012/: plasmate.odp
openSUSE grSummer Camp 2011/: CMakeLists.txt  hellokdeprogramming.h
